Online shop ver 1.0

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
+spring.h2.console.enabled=true
+server.port=8081
+
+#DB
+spring.datasource.url=jdbc:h2:~/online_shop
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=InterRao
+spring.datasource.password=InterRao
+
+#liquibase
+spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
+
+#JPA
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
